zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/fn_type_returning_pointer_to_itself.zig
const MyFn = fn () ?*const MyFn;
comptime {
    _ = MyFn;
}

// error
//
// :1:28: error: value of declaration 'tmp.MyFn' depends on itself here
